--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         
     -->
     <div id="bored" class="step slide" data-x="-1000" data-y="-1500">
-        <q>program flowhchart</q>
+        <q>The Three Control Structures and a Variation</q>
     </div>
 
     <!--
